Process Plan tab minor fixation(top-box gap)

--- a/force-app/main/default/lwc/aIPlanProcessTab/aIPlanProcessTab.css
+++ b/force-app/main/default/lwc/aIPlanProcessTab/aIPlanProcessTab.css
@@ -113,11 +113,11 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .top-box {
-  height: 17%;
+  height: 20%;
   background-color: #81D7D7;
   margin-bottom: 10px;
   border-radius: 5px;
